--- a/RF_Go/Platforms/iOS/Info.plist
+++ b/RF_Go/Platforms/iOS/Info.plist
@@ -12,8 +12,15 @@
 		<string>1</string>
 		<key>CFBundleShortVersionString</key>
 		<string>1.0</string>
+		<key>CFBundleDevelopmentRegion</key>
+		<string>en</string>
 		<key>UILaunchStoryboardName</key>
 		<string>MauiSplash</string>
+		<key>UIBackgroundModes</key>
+		<array>
+			<string>fetch</string>
+			<string>background-processing</string>
+		</array>
 		<key>UIDeviceFamily</key>
 		<array>
 			<integer>1</integer>
