--- a/RF_Go/RF_Go.csproj
+++ b/RF_Go/RF_Go.csproj
@@ -87,9 +87,9 @@
     </PropertyGroup>
 
     <!-- Configuration du trimming par plateforme -->
-    <!-- macOS/iOS : Trimming OBLIGATOIRE -->
+    <!-- macOS/iOS : TEMPORAIREMENT DÉSACTIVÉ pour test rapide -->
     <PropertyGroup Condition="'$(TargetFramework)' == 'net8.0-maccatalyst' OR '$(TargetFramework)' == 'net8.0-ios'">
-      <PublishTrimmed>true</PublishTrimmed>
+      <PublishTrimmed>false</PublishTrimmed>
       <TrimmerDefaultAction>link</TrimmerDefaultAction>
     </PropertyGroup>
     
