--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,13 @@ RF_Go.db3
 Run Command
 Complement_Rapport_RF_Go.docx
 Structure_Presentation_RF_Go.md
+Presentation_TFE_RF_Go.md
 build-local.ps1
 build-installer.ps1
 debug-android.ps1
 build-android.ps1
 build-macos.sh
+
 
 # User-specific files
 *.rsuser
