--- a/RF_Go/RF_Go.csproj
+++ b/RF_Go/RF_Go.csproj
@@ -149,6 +149,7 @@
         <PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.7" />
         <PackageReference Include="SQLitePCLRaw.core" Version="2.1.7" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
+        <PackageReference Include="QuestPDF" Version="2024.12.6" />
     </ItemGroup>
 
     <ItemGroup>
