--- a/.github/workflows/test-licensing-integration.yml
+++ b/.github/workflows/test-licensing-integration.yml
@@ -25,7 +25,7 @@ jobs:
       uses: peter-evans/repository-dispatch@v3
       with:
         token: ${{ secrets.LICENSING_SERVER_TOKEN }}
-        repository: c_bou/licensing_server
+        repository: Beatwen/Licensing-Server
         event-type: rf-go-release
         client-payload: |
           {
