--- a/RF_Go/RF_Go.csproj
+++ b/RF_Go/RF_Go.csproj
@@ -124,6 +124,7 @@
 		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.100" />
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
         <PackageReference Include="CommunityToolkit.Maui" Version="8.0.0" />
+        <PackageReference Include="LiveCharts" Version="0.9.7" />
         <PackageReference Include="LiveChartsCore.SkiaSharpView.Maui" Version="2.0.0-rc4.5" />
         <PackageReference Include="Makaretu.Dns" Version="2.0.1" />
         <PackageReference Include="Makaretu.Dns.Multicast.New" Version="0.37.0" />
