--- a/RF_Go/RF_Go.csproj
+++ b/RF_Go/RF_Go.csproj
@@ -18,8 +18,7 @@
         <ApplicationTitle>RF_Go</ApplicationTitle>
 
         <!-- App Identifier -->
-        <ApplicationId Condition="'$(TargetFramework)' != 'net8.0-ios'">com.companyname.rf_go</ApplicationId>
-        <ApplicationId Condition="'$(TargetFramework)' == 'net8.0-ios'">com.christophebouserez.rfgo</ApplicationId>
+        <ApplicationId>com.companyname.rf_go</ApplicationId>
         <ApplicationIdGuid>F1280CF3-71B1-40BF-A5C9-2F6267D27C2F</ApplicationIdGuid>
 
         <!-- Versions -->
@@ -47,7 +46,8 @@
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(TargetFramework)'=='net8.0-ios'">
-      <CodesignProvision>RF_Go_Development</CodesignProvision>
+      <ApplicationId>FT3A4TV42D.com.christophebouserez.rfgo</ApplicationId>
+      <CodesignProvision>RF Go iOS</CodesignProvision>
 	    <CodesignTeamId>FT3A4TV42D</CodesignTeamId>
 	    <ProvisioningType>manual</ProvisioningType>
     </PropertyGroup>
