Fix ApplicationId: use exact Bundle ID from provisioning profile

--- a/RF_Go/RF_Go.csproj
+++ b/RF_Go/RF_Go.csproj
@@ -18,7 +18,7 @@
         <ApplicationTitle>RF_Go</ApplicationTitle>
 
         <!-- App Identifier -->
-        <ApplicationId>com.christophebouserez.rfgo</ApplicationId>
+        <ApplicationId>FT3A4TV42D.com.christophebouserez.rfgo</ApplicationId>
         <ApplicationIdGuid>F1280CF3-71B1-40BF-A5C9-2F6267D27C2F</ApplicationIdGuid>
 
         <!-- Versions -->
