--- a/RF_Go/Platforms/iOS/Info.plist
+++ b/RF_Go/Platforms/iOS/Info.plist
@@ -7,7 +7,7 @@
 		<key>CFBundleName</key>
 		<string>RF_Go</string>
 		<key>CFBundleIdentifier</key>
-		<string>com.companyname.rf_go</string>
+		<string>com.christophebouserez.rfgo</string>
 		<key>CFBundleVersion</key>
 		<string>1</string>
 		<key>CFBundleShortVersionString</key>
