--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -91,7 +91,7 @@ jobs:
         dotnet msbuild RF_Go/RF_Go.csproj -p:TargetFramework=net8.0-ios -t:_ShowApplicationId -v:minimal || echo "Custom target not found"
         
         echo "=== STARTING iOS BUILD ==="
-        dotnet publish RF_Go/RF_Go.csproj -c Release -f net8.0-ios -r ios-arm64 --self-contained -o ./publish/ios-arm64 -p:PublishReadyToRun=false -p:PublishTrimmed=true -p:CodesignProvision="RF Go iOS" -p:ApplicationId="com.christophebouserez.rfgo" -v detailed
+        dotnet publish RF_Go/RF_Go.csproj -c Release -f net8.0-ios -r ios-arm64 --self-contained -o ./publish/ios-arm64 -p:PublishReadyToRun=false -p:PublishTrimmed=true -p:CodesignProvision="RF Go iOS" -p:CreatePackage=true -v detailed
         
         echo "=== POST-BUILD VERIFICATION ==="
         if [ -d "./publish/ios-arm64" ]; then
