--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -14,8 +14,28 @@ jobs:
       with:
         fetch-depth: 0
     
+    - name: List available Xcode versions
+      run: |
+        echo "=== AVAILABLE XCODE VERSIONS ==="
+        ls -la /Applications/ | grep -i xcode
+        echo "=== CURRENT XCODE VERSION ==="
+        xcode-select -p
+        xcodebuild -version
+    
     - name: Select Xcode version
-      run: sudo xcode-select -s /Applications/Xcode_16.1.app/Contents/Developer
+      run: |
+        # Try different Xcode versions available on macos-14
+        if [ -d "/Applications/Xcode_16.0.app" ]; then
+          sudo xcode-select -s /Applications/Xcode_16.0.app/Contents/Developer
+          echo "Selected Xcode 16.0"
+        elif [ -d "/Applications/Xcode_15.4.app" ]; then
+          sudo xcode-select -s /Applications/Xcode_15.4.app/Contents/Developer
+          echo "Selected Xcode 15.4 (fallback)"
+        else
+          echo "Using default Xcode"
+        fi
+        echo "=== FINAL XCODE VERSION ==="
+        xcodebuild -version
     
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
@@ -48,13 +68,13 @@ jobs:
     - name: Debug iOS Configuration
       run: |
         echo "=== CURRENT CONFIGURATION ==="
-        echo "Target Framework: net8.0-ios17.5"
+        echo "Target Framework: net8.0-ios"
         echo "Expected ApplicationId: com.christophebouserez.rfgo"
         echo "Expected CodesignProvision: RF Go iOS"
         echo "Expected TeamId: FT3A4TV42D"
         
         echo "=== CHECKING PROJECT FILE ==="
-        grep -A 10 -B 5 "net8.0-ios17.5" RF_Go/RF_Go.csproj || echo "iOS section not found"
+        grep -A 10 -B 5 "net8.0-ios" RF_Go/RF_Go.csproj || echo "iOS section not found"
         
         echo "=== AVAILABLE CERTIFICATES ==="
         security find-identity -v -p codesigning
@@ -84,17 +104,17 @@ jobs:
         ls -la ~/Library/MobileDevice/Provisioning\ Profiles/
         
         echo "=== CLEANING BUILD CACHE ==="
-        dotnet clean RF_Go/RF_Go.csproj -c Release -f net8.0-ios17.5
+        dotnet clean RF_Go/RF_Go.csproj -c Release -f net8.0-ios
         rm -rf RF_Go/obj RF_Go/bin
         
         echo "=== CHECKING APPLICATIONID PROPERTY ==="
-        dotnet msbuild RF_Go/RF_Go.csproj -t:_GetApplicationId -p:TargetFramework=net8.0-ios17.5 -v:minimal || echo "Could not get ApplicationId"
+        dotnet msbuild RF_Go/RF_Go.csproj -t:_GetApplicationId -p:TargetFramework=net8.0-ios -v:minimal || echo "Could not get ApplicationId"
         
         echo "=== FORCE DISPLAY APPLICATIONID ==="
-        dotnet msbuild RF_Go/RF_Go.csproj -p:TargetFramework=net8.0-ios17.5 -t:_ShowApplicationId -v:minimal || echo "Custom target not found"
+        dotnet msbuild RF_Go/RF_Go.csproj -p:TargetFramework=net8.0-ios -t:_ShowApplicationId -v:minimal || echo "Custom target not found"
         
         echo "=== STARTING iOS BUILD ==="
-        dotnet publish RF_Go/RF_Go.csproj -c Release -f net8.0-ios17.5 -r ios-arm64 --self-contained -o ./publish/ios-arm64 -p:PublishReadyToRun=false -p:PublishTrimmed=false -p:CodesignProvision="RF Go iOS" -p:CreatePackage=true -v detailed
+        dotnet publish RF_Go/RF_Go.csproj -c Release -f net8.0-ios -r ios-arm64 --self-contained -o ./publish/ios-arm64 -p:PublishReadyToRun=false -p:PublishTrimmed=false -p:CodesignProvision="RF Go iOS" -p:CreatePackage=true -v detailed
         
         echo "=== POST-BUILD VERIFICATION ==="
         if [ -d "./publish/ios-arm64" ]; then
